added link and image files

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwind-Template</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="../output/tailwind.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body>
-    <div
-      class="m-20 h-32 w-32 rounded border-2 border-black bg-lime-500 text-white"
-    >
-      Hello
-    </div>
+    <h1 class="my-6 text-center text-4xl font-extrabold">My Shopping Cart</h1>
+    
   </body>
 </html>
