added check out button

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             <img class="mx-3" src="./images/remove.png" alt="" />
           </div>
         </div>
-        <div class="rounded-2xl bg-white px-10 py-4 flex justify-between">
+        <div class="flex justify-between rounded-2xl bg-white px-10 py-4">
           <div>
             Subtotal:<br />
             Tax: <br />
@@ -63,6 +63,11 @@
             $127.8 <br />
             $1405.8
           </div>
+        </div>
+        <div class="container mx-auto mt-5 flex w-full justify-end">
+          <button class="rounded bg-green-500 px-5 py-1.5 text-white">
+            Check Out
+          </button>
         </div>
       </section>
     </main>
